# battleships

./: CMakeLists.txt  README.md
include/view/: BoardButton.h
src/: main.cpp
src/model/: board.cpp
src/util/: utils.cpp
src/view/: GameView.cpp
tests/: test1.cpp
